objects/User.object
<CustomObject>
    <fields>
        <fullName>Training_Location__c</fullName>
        <label>Training Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Austin, MN</fullName>
                </value>
                <value>
                    <fullName>Cincinnati,OH</fullName>
                </value>
                <value>
                    <fullName>Dallas, TX</fullName>
                </value>
                <value>
                    <fullName>Denver, CO</fullName>
                </value>
                <value>
                    <fullName>Des Moines, IA</fullName>
                </value>
                <value>
                    <fullName>Fort Worth, Texas</fullName>
                </value>
                <value>
                    <fullName>Madison, WI</fullName>
                </value>
                <value>
                    <fullName>Madison/Wausau WI</fullName>
                </value>
                <value>
                    <fullName>Portland, OR</fullName>
                </value>
                <value>
                    <fullName>Power User</fullName>
                </value>
                <value>
                    <fullName>Rochester, MN</fullName>
                </value>
                <value>
                    <fullName>Shoreview, MN</fullName>
                </value>
                <value>
                    <fullName>Sioux Falls, SD</fullName>
                </value>
                <value>
                    <fullName>WebEx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Status__c</fullName>
        <description>Salesforce.com Training Status</description>
        <label>Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Scheduled</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Subtype__c</fullName>
        <description>The user&apos;s subtype is the next level down within the User Type</description>
        <formula>If( text(UserType) = &quot;CSN Only&quot;,&quot;Chatter Free&quot;, 
If( text(UserType) = &quot;PowerPartner&quot;,&quot;Community User&quot;, 
If( text(UserType) = &quot;Guest&quot;,&quot;Community Support&quot;, 
If(Text(Function__c) = &quot;PMI Nutrition&quot;,&quot;PMI Nutrition&quot;,
If( Contains(Profile.Name,&quot;CloudCraze Reporting&quot;),&quot;Community Support&quot;, 
If( Contains(Profile.Name,&quot;Online Order&quot;),&quot;Community Support&quot;, 
If( Contains(Profile.Name,&quot;Community Content&quot;),&quot;Community Support&quot;, 
If( Contains(Profile.Name,&quot;Partner Comm&quot;),&quot;Community User&quot;, 
If( Full_Name__c = &quot;Johnny Bravo&quot;, &quot;Purina Sales Support&quot;,
If( Contains(Profile.Name,&quot;Analytics&quot;),&quot;Analytic Cloud&quot;, 
If( Text(Function__c) = &quot;Purina Sales Support&quot;, &quot;Purina Sales Support&quot;,
If( Contains(Profile.Name,&quot;Sales Read Only&quot;),&quot;Purina Sales Support&quot;, 
If( Contains(Profile.Name,&quot;MRE&quot;),&quot;Milk Replacer Enterprise&quot;, 
If( Contains(Profile.Name,&quot;Technical Services&quot;),&quot;Technical Services&quot;, 
If( Contains(Profile.Name,&quot;Sales Specialist&quot;),&quot;Purina Sales Team&quot;, 
If( Contains(Profile.Name,&quot;LPS User&quot;),&quot;Purina Sales Team&quot;, 
If( Contains(Profile.Name,&quot;Area Sales Manager&quot;),&quot;Purina Sales Team&quot;, 
If( Contains(Profile.Name,&quot;Regional Dir&quot;),&quot;Purina Sales Team&quot;, 
If( Contains(Profile.Name,&quot;Sales Exec&quot;),&quot;Purina Sales Team&quot;, 
If( Contains(Profile.Name,&quot;Sales Operations&quot;),&quot;Purina Sales Support&quot;, 
If( Contains(Profile.Name,&quot;Sales Admin&quot;),&quot;Purina Sales Support&quot;, 
If( Contains(Profile.Name,&quot;Farm VIP&quot;),&quot;Purina Sales Support&quot;, 
If( Contains(Profile.Name,&quot;Distribution Alerts&quot;),&quot;Purina Sales Support&quot;, 
If( Contains(Profile.Name,&quot;National Events&quot;),&quot;Purina Sales Support&quot;,
If( Contains(Profile.Name,&quot;Inside Sales&quot;),&quot;Inside Sales&quot;, 
If( Contains(Profile.Name,&quot;Dealer Bus&quot;),&quot;Dealer Business Development&quot;, 
If( Contains(Profile.Name,&quot;Exotics&quot;),&quot;Mazuri&quot;,
If( Contains(Profile.Name,&quot;Latin&quot;),&quot;Latin America Sales&quot;,  
If( Contains(Profile.Name,&quot;Customer Ops Delegated Administrator&quot;),&quot;Service Cloud Support&quot;,
If( Contains(Profile.Name,&quot;Consumer Group&quot;),&quot;Consumer Team&quot;, 
If( Contains(Profile.Name,&quot;Customer Op&quot;),&quot;Customer Operations&quot;, 
If( Contains(Profile.Name,&quot;Customer Care&quot;),&quot;Customer Care&quot;, 
If( Contains(Profile.Name,&quot;Plant&quot;),&quot;Plant Manager&quot;, 
If( Contains(Profile.Name,&quot;Quality&quot;),&quot;Quality Team&quot;, 
If( Contains(Profile.Name,&quot;Marketing User (Custom)&quot;),&quot;Marketing&quot;, 
If( Profile.Id = &quot;00ej0000000WVCU&quot;, &quot;System Administrator&quot;, 
If( Profile.Id = &quot;00ej0000000WVCY&quot;, &quot;Platform Support&quot;, 
If( Contains(Profile.Name,&quot;Premier Support&quot;),&quot;Platform Support&quot;, 
If( Contains(Profile.Name,&quot;Read&quot;),&quot;Platform Support&quot;, 
&quot;&quot;)))))))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Subtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>Identified the &quot;Type&quot; of user.</description>
        <formula>If( text(UserType) = &quot;CSN Only&quot;,&quot;Chatter&quot;, 
If( text(UserType) = &quot;PowerPartner&quot;,&quot;Community&quot;, 
If( text(UserType) = &quot;Guest&quot;,&quot;Guest&quot;, 
If(Text(Function__c) = &quot;PMI Nutrition&quot;,&quot;PMI Nutrition&quot;,
If( Contains(Profile.Name,&quot;CloudCraze Reporting&quot;),&quot;Community&quot;, 
If( Contains(Profile.Name,&quot;Analytics&quot;),&quot;Analytic Cloud&quot;, 
If( Contains(Profile.Name,&quot;Online Order&quot;),&quot;Support&quot;, 
If( Contains(Profile.Name,&quot;Community Content&quot;),&quot;Community&quot;, 
If( Contains(Profile.Name,&quot;Partner Comm&quot;),&quot;Community&quot;, 
If( Contains(Profile.Name,&quot;MRE&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Technical Services&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Sales Specialist&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Sales Operations&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;LPS User&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Inside Sales&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Area Sales Manager&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Farm VIP&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Regional Dir&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Exotics&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Sales Exec&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Sales Admin&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Distribution Alerts&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Dealer Bus&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Latin&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;National Events&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Consumer Group&quot;),&quot;Service Cloud&quot;, 
If( Contains(Profile.Name,&quot;Customer Op&quot;),&quot;Service Cloud&quot;, 
If( Contains(Profile.Name,&quot;Customer Care&quot;),&quot;Service Cloud&quot;, 
If( Contains(Profile.Name,&quot;Plant&quot;),&quot;Service Cloud&quot;, 
If( Contains(Profile.Name,&quot;Quality&quot;),&quot;Service Cloud&quot;, 
If( Contains(Text(Function__c),&quot;Purina Sales Support&quot;),&quot;Sales Cloud&quot;, 
If( Contains(Profile.Name,&quot;Marketing User (Custom)&quot;),&quot;Sales Cloud&quot;,
If( Profile.Id = &quot;00ej0000000WVCU&quot;, &quot;Support&quot;, 
If( Profile.Id = &quot;00ej0000000WVCY&quot;, &quot;Support&quot;, 
If( Contains(Profile.Name,&quot;Premier Support&quot;),&quot;Platform Support&quot;, 
If( Contains(Profile.Name,&quot;Read&quot;),&quot;Support&quot;, 
&quot;&quot;))))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_User_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CC_CurrencyCode__c</fullName>
        <description>Customized Currency field for Orgs which don&apos;t have  Multi-currency feautre.</description>
        <label>Currency</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__CompanyType__c</fullName>
        <label>CompanyType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISP</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ContactTypeRole__c</fullName>
        <description>CloudCraze contact type role</description>
        <label>Contact Type Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Researcher/Post Doc</fullName>
                    <default>true</default>
                    <label>Researcher/Post Doc</label>
                </value>
                <value>
                    <fullName>Purchasing Agent</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Lab Manager</fullName>
                </value>
                <value>
                    <fullName>Department Chair</fullName>
                </value>
                <value>
                    <fullName>Principal Investigator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the current user gets qualified for the tax-exempt</description>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__User_Industry__c</fullName>
        <description>CloudCraze user industry</description>
        <label>User Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic research</fullName>
                    <default>true</default>
                    <label>Academic research</label>
                </value>
                <value>
                    <fullName>commercial</fullName>
                </value>
                <value>
                    <fullName>government</fullName>
                </value>
                <value>
                    <fullName>OEM-Reseller</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__User_Salutation__c</fullName>
        <description>CloudCraze user salutation</description>
        <label>User Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                    <default>true</default>
                    <label>Mr</label>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Dr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>@deprecated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__incCustomScreenpop__c</fullName>
        <description>Value of this field to be updated from inContact Agent Console app, use this field to get the value of inContact script variables.</description>
        <label>inContact Custom Screenpop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Version__c</fullName>
        <label>Pardot Api Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Customer_Operations_Team</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Customer Operations,Customer Operations Manager,Customer Care</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Customer Care Manager,Customer Ops Delegated Administrator,Consumer Group</value>
        </filters>
        <label>Customer Operations Team</label>
        <sharedTo>
            <role>Customer_Ops_Director</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Fast_Field_Forms_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FastFieldUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Fast Field Forms Users</label>
    </listViews>
    <listViews>
        <fullName>InactiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>Sales_Division__c</columns>
        <columns>Sales_Region__c</columns>
        <columns>EMPLOYEE_NUMBER</columns>
        <columns>CREATED_DATE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
    </listViews>
    <listViews>
        <fullName>Internal_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.IS_PARTNER</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Internal Users</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Plant_Quality_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Plant Manager,Quality Team</value>
        </filters>
        <label>Plant &amp; Quality Users</label>
        <sharedTo>
            <role>Customer_Ops_Director</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>System_Administrators</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Function__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CREATED_BY_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>System Administrators</label>
        <sharedTo>
            <role>System_Administrator</role>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>